<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddToDoActivity"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_todo_str"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:textSize="40sp"
        android:gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_str"
        android:textSize="15sp"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"/>
    <EditText
        android:id="@+id/add_EDT_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_title_str"
        android:background="@drawable/edit_text_background"
        android:padding="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_str"
        android:textSize="15sp"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"/>
    <EditText
        android:id="@+id/add_EDT_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_date_str"
        android:background="@drawable/edit_text_background"
        android:padding="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_str"
        android:textSize="15sp"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"/>
    <EditText
        android:id="@+id/add_EDT_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_time_str"
        android:background="@drawable/edit_text_background"
        android:padding="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_str"
        android:textSize="15sp"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"/>
    <EditText
        android:id="@+id/add_EDT_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_description_str"
        android:background="@drawable/edit_text_background"
        android:padding="10dp"
        android:lines="4"
        android:gravity="start"/>

    <Button
        android:id="@+id/add_BTN_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_str"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@drawable/button_background"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>

</LinearLayout>