<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ToDoDetailsActivity"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/todo_details_str"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:textSize="40sp"
        android:gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_str"
        android:textSize="15sp"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"/>
    <TextView
        android:id="@+id/details_EDT_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_str"
        android:textSize="15sp"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"/>
    <TextView
        android:id="@+id/details_EDT_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_str"
        android:textSize="15sp"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"/>
    <TextView
        android:id="@+id/details_EDT_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_str"
        android:textSize="15sp"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"/>
    <TextView
        android:id="@+id/details_EDT_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_gravity="center">
        <Button
            android:id="@+id/details_BTN_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish_str"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/button_background"
            android:layout_marginRight="20dp"/>
        <Button
            android:id="@+id/details_BTN_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_str"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:background="@drawable/button_white_background"
            android:layout_marginLeft="20dp"/>
    </LinearLayout>

</LinearLayout>