<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/main_LYT_signup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="invisible">
        
    
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_str"
            android:textStyle="bold"
            android:textSize="50sp"
            android:textColor="@color/blue"
            android:layout_gravity="center"/>
    
        <EditText
            android:id="@+id/main_EDT_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_str"
            android:background="@drawable/edit_text_background"
            android:padding="10dp"
            android:layout_marginTop="10dp"/>
    
        <EditText
            android:id="@+id/main_EDT_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_str"
            android:inputType="phone"
            android:background="@drawable/edit_text_background"
            android:padding="10dp"
            android:layout_marginTop="10dp"/>
    
        <Button
            android:id="@+id/main_BTN_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_str"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:background="@drawable/button_background"
            android:layout_marginTop="10dp"
            android:elevation="5dp"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/main_PRB"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:progressDrawable="@drawable/circular_progress_bar"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"/>

</RelativeLayout>